--- a/oscar.html
+++ b/oscar.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="paisesoscar.js"></script>
+    <script src="rectificacion.js" defer></script>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         </header>
         <div>
             <nav class="text-center">
-                <button type="button" class="btn btn-info">Datos Generales</button>
+                <button  onclick="dameDatosGenerales()" type="button" class="btn btn-info">Datos Generales</button>
                 <button type="button" onclick="datosGeograficos()" class="btn btn-info">Datos Geográficos</button>
                 <button type="button" class="btn btn-info">Traducciones</button>
                 <button type="button" class="btn btn-info">Banderas</button>
@@ -55,24 +55,8 @@
                     </div>
                 </form>
             </div>
-
-            <table class="table table-stripped">
-                <tr>
-                    <th class="text-center">Capital</th>
-                    <th class="text-center">Población</th>
-                    <th class="text-center">Dominio</th>
-                    <th class="text-center">Área</th>
-                    <th class="text-center">Moneda</th>
-                </tr>
-                <tr>
-                    <td class="text-center">xxx</td>
-                    <td class="text-center">999</td>
-                    <td class="text-center">xxx</td>
-                    <td class="text-center">999</td>
-                    <td class="text-center">xxx</td>
-                </tr>
-
-            </table>
+           
+            
 
             <div id="traduccion" class="container tab-pane fade mt-4"><br>
             </div>
