--- a/marche.html
+++ b/marche.html
@@ -43,7 +43,7 @@
                                 <option value="americas">América</option>
                                 <option value="asia">Asia</option>
                                 <option value="europe">Europa</option>
-                                <option value="oceania">Oceania</option>
+                                <option value="oceania">Oceanía</option>
                             </select>
                         </div>
 
