--- a/paisesPrincipal.html
+++ b/paisesPrincipal.html
@@ -56,7 +56,7 @@
       <div class="col">
         <h2>Seleccione país</h2>
         <label for="sel2" class="form-label"></label>
-        <select class="form-select bg-success " name="sel2" onchange=cargarDatos(this.value)>
+        <select class="form-select bg-success " name="sel2" id="paises" onchange=cargarDatos(this.value)>
           <option></option>
         </select>
       </div>
