--- a/paises1.html
+++ b/paises1.html
@@ -69,6 +69,7 @@
                         </div>
                         <div class="d-inline-block">
                             <select class="form-select" id="continent" style="width:auto;">
+                                <option value="definir">Selecciona el continente..</option>
                                 <option value="asia">Asia</option>
                                 <option value="america">America</option>
                                 <option value="europe">Europa</option>
@@ -92,10 +93,11 @@
                 </div>
             </section>
             <!--FIn de select -->
+            <!--Una section vacio-->
             
             <section>
                 <div class="tab-content container mt-3">
-                    <div class="tab-pane active" id="generales">
+                    <div class="tab-pane face show" id="generales">
                         <div class="container mt-3">
                             <div class="w-50 p-3 mx-auto overflow-hidden" style="background-color: rgb(253, 253, 253);">
                                 <div class="d-block">
@@ -173,7 +175,7 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseThree" aria-expanded="false"
                                         aria-controls="flush-collapseThree">
-                                        Italia
+                                        Italianini
                                     </button>
                                 </h2>
                                 <div id="flush-collapseThree" class="accordion-collapse collapse"
