--- a/html/refuerzo1.html
+++ b/html/refuerzo1.html
@@ -31,13 +31,13 @@
 
 
       <form action="http://localhost:8080/prueba/Ejemplo" method="get">
-        texto: <input type="text" name="texto" /><button type="submit">
+        <label for="texto"> texto: </label><input type="text" name="texto" /><button type="submit">
           enviar
         </button>
       </form>
 
 
-      
+
     </main>
   </body>
 </html>
