--- a/datos.html
+++ b/datos.html
@@ -101,52 +101,57 @@
 
     <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste accusantium vitae, cumque molestiae eligendi
         odit nemo quasi excepturi voluptate dolorum velit pariatur corrupti aut nihil, mollitia, tempore ad voluptas
-        maiores.</div>
-    <div class="row">
-        <div class="col">
-            <div class="p-5">
-                <form class="form-inline" role="form">
-                    <div class="form-group">
-                        <label for="text">Capital:</label>
-                        <input type="text" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="number">Poblacion:</label>
-                        <input type="texto" class="form-control">
-                        <div class="form-group">
-                            <label for="text">Idioma:</label>
-                            <input type="text" class="form-control">
-                        </div>
-                    </div>
-
-            </div>
-        </div>
-        <div class="col">
-            <div class="p-5">
-
-                <div class="form-group">
-                    <label for="text">Moneda:</label>
-                    <input type="text" class="form-control">
-
-                    <ol>Simbolo <label for="texto">Moneda:</label>
-                        <input type="text" class="form-control">
-                    </ol>
-                </div>
-                <ol></ol>
-                <div class="form-group">
-                    <label for="text">Forma de Gobierno:</label>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="text">Religion:</label>
-                    <input type="text" class="form-control">
-                </div>
-            </div>
-        </div>
-        <div class="col"></div>
+        maiores.
     </div>
-    
-
+    <div>
+        <table class="table table-secondary table-striped table-hover">
+            <thead>Datos Geograficos:</thead>
+            <tbody>
+                <tr>
+                    <td>Poblacion:</td>
+                </tr>
+                <tr>
+                    <td>Capital:</td>
+                </tr>
+                <tr>
+                    <td>Idioma:</td>
+                </tr>
+                <tr>
+                    <td>Forma de Gobierno:</td>
+                </tr>
+                <tr>
+                    <td>Religion:</td>
+                </tr>
+                <tr>
+                    <td>Moneda:</td>
+                </tr>
+                </tb>
+        </table>
+    </div>
+    <div>
+        <div colspan="1" aling="center">
+            <div>
+                <div form action="" method=""></div>
+                <label>Capital:</label>
+                <input type="text" maxlength="60">
+            </div>
+            <div>
+                <div form action="" method=""></div>
+                <label>Idioma:</label>
+                <input type="text" maxlength="60">
+            </div>
+            <div>
+                <div form action="" method=""></div>
+                <label>Religion:</label>
+                <input type="text" maxlength="60">
+            </div>
+            <div>
+                <div form action="" method=""></div>
+                <label>Moneda:</label>
+                <input type="text" maxlength="60">
+            </div>
+        </div>
+    </div>
     <!-- INICIO DEL FOOTER!!!!!!!!!!!!!! -->
     <footer
         class="container-fluid bg-secondary bg-gradient text-center text-white text-lg-start position-fixed bottom-0">
