--- a/oscarpaises.html
+++ b/oscarpaises.html
@@ -63,13 +63,13 @@
             <div id="banderas" class="container tab-pane fade"><br>
             </div>
             <main>
-                <div id="fronteras" class="container text-center">
+              <!--  <div id="fronteras" class="container text-center">
                     <h3 class="frontera1">Frontera 1</h3>
                     <h3 class="frontera2">Frontera 2</h3>
                     <h3 class="frontera3">Frontera 3</h3>
                     <h3 class="frontera4">Frontera 4</h3>
                     <h3 class="frontera5">Frontera 5</h3>
-                </div>
+                </div>-->
             </main>
         </div>
     </div>
