--- a/paises1.html
+++ b/paises1.html
@@ -186,6 +186,10 @@
                                 </div>
                             </div>
                         </div>
+                        <!--<div class="spinner-border m-5" role="status">
+                            <span class="sr-only" ><img src="images/javier_web.png" width="100px" ></span>
+                        </div>-->
+
                     </div>
                 </div>
 
@@ -209,6 +213,7 @@
             </div>
         </section>
         </div>
+    
     </main>
     <footer>
 
