--- a/refuerzo1.html
+++ b/refuerzo1.html
@@ -43,6 +43,68 @@
 
     </main>
 
+
+
+
+
+
+
+    ////////
+
+    <form action="method">
+        <table border="1">
+            <tr>
+                <h3>suma</h3>
+            <tr>
+                <td>
+                    numero1:<input type="number" placeholder="escribe un numero " id="num1"></td>
+            </tr>
+            <tr>
+                <td>
+                    numero2:<input type="number" placeholder="escribe un numero " id="num2"></td>
+            </tr>
+            <tr>
+                <td align="center"><button onclick="sumar()">sumar</button>
+                </td>
+            </tr>
+            </tr><br>
+        </table>
+    </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
