--- a/ejerciciorefuerzo.html
+++ b/ejerciciorefuerzo.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <form action="method">
+        <table border="1">
+            <tr>
+
+            <tr>
+                <td> numero1:<input type="number"  id="num1"></td>
+            </tr>
+            <tr>
+                <td>
+                    numero2:<input type="number" id="num2"></td>
+            </tr>
+            <tr>
+                <td align="center"><button onclick="sumar()">sumar</button>
+                </td>
+            </tr>
+            </tr><br>
+        </table>
 </body>
+
 </html>
