--- a/tarde.html
+++ b/tarde.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="tarde.js"></script>
     <title>Document</title>
 </head>
 
@@ -14,15 +15,13 @@
             <tr>
 
             <tr>
-                <td> numero1:<input type="number"  id="num1"></td>
+                <td> numero1:<input type="number" id="#num1"></td>
             </tr>
             <tr>
-                <td>
-                    numero2:<input type="number" id="num2"></td>
+                <td>numero2:<input type="number" id="#num2"></td>
             </tr>
             <tr>
-                <td align="center"><button onclick="sumar()">sumar</button>
-                </td>
+                <td align="center"><button onclick="sumar()">sumar</button></td>
             </tr>
             </tr><br>
         </table>
