--- a/ejercicioMarche.html
+++ b/ejercicioMarche.html
@@ -12,19 +12,21 @@
 
 <body>
     <Form>
-        <label for="numero1">Número1</label>
-        <input type="number" id="numero1" name="numero1"><br>
-        <label for="numero2">Número2</label>
-        <input type="number" id="numero2" name="numero2"><br>
-        <button onclick="sumar()">Sumar</button>
+        <label for="numero1">Número 1:</label>
+        <input type="number" id="numero1" name="numero1"><br><br>
+        <label for="numero2">Número 2:</label>""
+        <input type="number" id="numero2" name="numero2"><br><br>
+        <button onclick="sumar()" style="background-color:#1b971f;">Sumar</button>
+
+
     </Form>
 
-    <Table border="1" style="width: 50%">
+    <Table border="1">
 
         <tr>
-            <td>Número1</td>
-            <td>Número2</td>
-            <td text="color=red">Resultado</td>
+            <td>Número 1</td><br><br><br>
+            <td>Número 2</td><br><br>
+            <td>Resultado</td>
         </tr>
     </Table>
 
