--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -13,14 +13,14 @@
 </head>
 
 <body style="background-color:#d2eeb6;">
-  </bodystyle>>
   <div class="container">
+
     <header>
       <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
         align="left" width="227" height="156">
       <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
         align="right" width="227" height="156">
-      <div class="container-fluid p-5 bg-success text-white text-center ">
+      <div class="container-fluid p-5 bg-success text-white text-center">
 
         <h1>PAISES DEL MUNDO</h1>
       </div>
