--- a/indexdark.html
+++ b/indexdark.html
@@ -166,7 +166,7 @@
                                 </div>
                                 <div class="col">
                                     <div class="celdagears">
-                                        <img src="imagenes/gear.png" class="gear1">
+                                        <img src="v4imagenes/gear.png" class="gear1">
                                         <img src="imagenes/gearmini.png" class="gear2">
                                     </div>
                                 </div>
