--- a/Denis.html
+++ b/Denis.html
@@ -23,12 +23,12 @@
                 </div>
             </div>
         </header>
-        <div>
-            <nav class="text-center">
-                <button onclick="dameDatosGenerales()" class="btn btn-info">Datos Generales</button>
-                <button type="button" class="btn btn-info">Datos Geográficos</button>
-                <button type="button" class="btn btn-info">Traducciones</button>
-                <button type="button" class="btn btn-info">Banderas</button>
+        <div class="fade" id="divspecial">
+            <nav class="text-center" id="nav" >
+                <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-info">Datos Generales</button>
+                <button disabled type="button" id="b2" class="btn btn-info">Datos Geográficos</button>
+                <button disabled type="button" id="b3" class="btn btn-info">Traducciones</button>
+                <button disabled type="button" id="b4" class="btn btn-info">Banderas</button>
             </nav>
         </div>
         <div class="tab-content mt-4">
@@ -46,7 +46,7 @@
                             </select>
                         </div>
                         <div class="col">
-                            País:<select id="paises" name="pais" class="form-select form-select-sm">
+                            País:<select onchange=cargarDatos(this.value) id="paises" name="pais" class="form-select form-select-sm">
                                 <option value="0">Elige un país</option>
                             </select>
                         </div>
