--- a/GeneralEduardo.html
+++ b/GeneralEduardo.html
@@ -25,10 +25,10 @@
                 </div>
             </div>
             <nav class="text-center">
-                <button type="button" class="btn btn-info" onclick=datosGeograficos() class="btn btn-info">Datos Generales</button>
-                <button type="button" class="btn btn-info">Datos Geográficos</button>
-                <button type="button" class="btn btn-info">Traducciones</button>
-                <button type="button" class="btn btn-info" onclick=cargaBanderaEscudo()>Banderas</button>
+                <button disabled  type="button" class="btn btn-info" onclick=datosGeograficos() class="btn btn-info">Datos Generales</button>
+                <button  disabled type="button" class="btn btn-info">Datos Geográficos</button>
+                <button  disabled type="button" class="btn btn-info">Traducciones</button>
+                <button disabled type="button" class="btn btn-info" onclick=cargaBanderaEscudo()>Banderas</button>
             </nav>
         </header>
 
