--- a/GeneralEduardo.html
+++ b/GeneralEduardo.html
@@ -1,77 +1,58 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grupo 3</title>
-
+    <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-     <script src="nuevoProyectoPaises.js" defer></script> 
+    <script src="nuevoProyectoPaises.js" defer></script>
 </head>
 
 <body>
-    <div class="container">
-        <header class=" mt-3">
+    <div class="container mt-4">
+        <header class="mt-3">
             <div class="row">
                 <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
-                        class="rounded-circle">
-                </div>
+                        class="rounded-circle"></div>
                 <div class="col-sm-10">
-                    <h1 class="text-center text-black pt-5">PAISES DEL MUNDO</h1>
+                    <h1 class="text-black text-center pt-5">PAISES DEL MUNDO</h1>
                 </div>
             </div>
-            <nav class="text-center">
-                <button disabled  type="button" class="btn btn-info" onclick=datosGeograficos() class="btn btn-info">Datos Generales</button>
-                <button  disabled type="button" class="btn btn-info">Datos Geográficos</button>
-                <button  disabled type="button" class="btn btn-info">Traducciones</button>
-                <button disabled type="button" class="btn btn-info" onclick=cargaBanderaEscudo()>Banderas</button>
-            </nav>
         </header>
-
-        <div class="tab-content">
+        <div class="fade" id="divspecial">
+            <nav class="text-center" id="nav" >
+                <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-info">Datos Generales</button>
+                <button disabled type="button" id="b2" class="btn btn-info">Datos Geográficos</button>
+                <button disabled type="button" id="b3" class="btn btn-info">Traducciones</button>
+                <button disabled type="button" id="b4" class="btn btn-info">Banderas</button>
+            </nav>
+        </div>
+        <div class="tab-content mt-4">
             <div id="datosgenerales" class="container tab-pane active"><br>
                 <form action="" method="post">
-                    <div>
-                        <div class="row">
-                            <div class="col">
-                                Continente:<select name="continente" onchange="cargarPaises(this.value)">
-                                    <option value="0">Elige un continente</option>
-                                    <option value="africa" onclick="cargaPaises(africa)">África</option>
-                                    <option value="americas" onclick="cargaPaises(americas)" >América</option>
-                                    <option value="asia" onclick="cargaPaises(asia)">Asia</option>
-                                    <option value="europe" onclick="cargaPaises(europe)">Europa</option>
-                                    <option value="oceania" onclick="cargaPaises(oceania)">Oceania</option>
-                                </select>
-                            </div>
-                            <div class="col">
-                                País:<select name="pais"onchange="cargarPaises (this.value)">
-                                    <option value="0">Elige un país</option>
-                                </select>
-                            </div>
+                    <div class="row">
+                        <div class="col">
+                            Continente:<select name="continente" class="form-select form-select-sm" onchange="cargarPaises(this.value)">
+                                <option value="0">Elige un continente</option>
+                                <option value="africa">Africa</option>
+                                <option value="americas">America</option>
+                                <option value="asia">Asia</option>
+                                <option value="europe">Europa</option>
+                                <option value="oceania">Oceania</option>
+                            </select>
+                        </div>
+                        <div class="col">
+                            País:<select onchange=cargarDatos(this.value) id="paises" name="pais" class="form-select form-select-sm">
+                                <option value="0">Elige un país</option>
+                            </select>
                         </div>
                     </div>
                 </form>
-                </tr>
-                </table>
-                <table class="table table-stripped" onchange="cargarDatosGenerales (this.value)">
-                    <tr>
-                    <th class=" text-center">Capital</th>
-                    <th class="text-center">Población</th>
-                    <th class="text-center">Dominio</th>
-                    <th class="text-center">Área</th>
-                    <th class="text-center">Moneda</th>
-                    </tr>
-                    <tr>
-                        <td class="text-center">xxx</td>
-                        <td class="text-center">999</td>
-                        <td class="text-center">xxx</td>
-                        <td class="text-center">999</td>
-                        <td class="text-center">xxx</td>
-                </table>
+            </div>
                 <div>
                     <div class="container mt-3" onchange="cargaBanderaEscudo (this.value)">
                         <h2 class="text-center">BANDERAS Y ESCUDOS</h2>
@@ -144,5 +125,4 @@
     </div>
 
 </body>
-
 </html>
