--- a/ejercicioMarche.html
+++ b/ejercicioMarche.html
@@ -16,15 +16,15 @@
         <input type="number" id="numero1" name="numero1"><br><br>
         <label for="numero2">Número 2:</label>
         <input type="number" id="numero2" name="numero2"><br><br>
-        <button onclick="sumar()" style="background-color:#1b971f;">Sumar</button>
+        <button onclick="sumar()" type="button" style="background-color:#1b971f;">Sumar</button>
 
     </Form>
 
     <Table border="1">
         <tr>
-            <td>Número 1</td><br><br>
-            <td>Número 2</td>
-            <td>Resultado</td>
+            <th>Número 1</th>
+            <th>Número 2</th>
+            <th>Resultado</th>
         </tr>
     </Table>
 
