--- a/HTML-CSS_JS/JAVA_SCRIPT/7dic.html
+++ b/HTML-CSS_JS/JAVA_SCRIPT/7dic.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Docu</title>
+    <title>Documento</title>
+    <script async src="arbolnumeros.js"></script>
 </head>
 <body>
-    
 </body>
 </html>
