--- a/David/index.html
+++ b/David/index.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="css/estilo.css">
     <script type="text/javascript" src="js/restcountries.js" defer></script>
+    <script type="text/javascript" src="js/pendulo2.js"></script>
 </head>
 
 <body>
@@ -21,8 +22,6 @@
     <main>
         <div class="container-fluid">
             <header>
-
-                <!-- INICIO DE HEADER-->
                 <nav class="navbar-brand bg-light">
                     <div class="d-block overflow-hidden">
                         <div class="float-start" style="width: 150px; height: 120px">
@@ -53,7 +52,8 @@
                         </ul>
                     </div>
                 </nav>
-            </header> <!-- FIN DE HEADER-->
+            </header>
+
             <section>
                 <div class="row text-center mt-4">
                     <div class="col">
@@ -85,6 +85,7 @@
                     </div>
                 </div>
             </section>
+
             <section>
                 <div class="tab-content container mt-3">
                     <div class="tab-pane active" id="generales">
@@ -123,6 +124,7 @@
                     </div>
                 </div>
             </section>
+            
             <section>
                 <div class="tab-content container mt-3">
                     <div class="tab-pane face show" id="traducir">
@@ -180,7 +182,7 @@
                         </div>-->
                     </div>
                 </div>
-
+            </section>
         </div>
         </section>
         <section>
