--- a/paises12.html
+++ b/paises12.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js">
     </script>
     <link rel="stylesheet" href="styledark.css">
-    <script src="paises.js"></script>
+    <script src="paises12.js"></script>
     <script datosgenerales.js></script>
 </head>
 
