--- a/Denis.html
+++ b/Denis.html
@@ -28,7 +28,7 @@
                 <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-info">Datos Generales</button>
                 <button disabled type="button" id="b2" class="btn btn-info">Datos Geográficos</button>
                 <button disabled type="button" id="b3" class="btn btn-info">Traducciones</button>
-                <button disabled type="button" id="b4" class="btn btn-info">Banderas</button>
+                <button disabled  onclick="dameBanderas()" type="button" id="b4" class="btn btn-info">Banderas</button>
             </nav>
         </div>
         <div class="tab-content mt-4">
