--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+    <div class="spinner-border text-danger" id="spinner">
+        <span class="visually-hidden">Loading...</span>
+    </div>
     <main>
         <div class="container-fluid">
             <header>
@@ -99,7 +102,7 @@
 
             <section>
                 <div class="tab-content container mt-3">
-                    <div class="tab-pane active" id="generales">
+                    <div class="tab-pane face show" id="generales">
                         <div class="container mt-3">
                             <div class="w-50 p-3 mx-auto overflow-hidden" style="background-color: rgb(253, 253, 253);">
                                 <div class="d-block">
