--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="container-fluid">
                         <ul class="nav nav-justified" id="ex1">
                             <li class="nav-item">
-                                <a href="#generales" class="nav-link fw-bold active" id="generales-tab"
+                                <a href="#generales" class="nav-link fw-bold" id="generales-tab"
                                     data-bs-toggle="tab" data-bs-toggle="#generales">DATOS GENERALES</a>
                             </li>
                             <li class="nav-item">
