--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
     <script type="text/javascript" src="js/mundo.js" defer></script>
 
 
+
 </head>
 
 <body>
     <div class="spinner-border text-danger" id="spinner">
         <span class="visually-hidden">Loading...</span>
+    </div>
+    <div class="cursor">
+        
     </div>
     <main>
         <div class="container-fluid">
@@ -142,7 +146,7 @@
                             <div class="w-50 p-3 mx-auto overflow-hidden" style="background-color: rgb(253, 253, 253);">
                                 <div class="d-block">
                                     <p><strong>Fronteras: </strong><span id="fronteras"></span></p>
-                                    <p><img src="images/moto.png" width="150"></p>
+                                    <p><img src="" width="150"></p>
                                 </div>
                             </div>
                         </div>
