--- a/Denis.html
+++ b/Denis.html
@@ -26,7 +26,7 @@
         <div class="fade" id="divspecial">
             <nav class="text-center" id="nav" >
                 <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-info">Datos Generales</button>
-                <button disabled type="button" id="b2" class="btn btn-info">Datos Geográficos</button>
+                <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2" class="btn btn-info">Datos Geográficos</button>
                 <button disabled type="button" id="b3" class="btn btn-info">Traducciones</button>
                 <button disabled  onclick="dameBanderas()" type="button" id="b4" class="btn btn-info">Banderas</button>
             </nav>
