--- a/GeneralEduardo.html
+++ b/GeneralEduardo.html
@@ -74,7 +74,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-        
+
         <script src="https://goo.gl/maps/uDWEUaXNcZTng1fP6"></script>
         <title>Bootstrap Example</title>
         <meta charset="utf-8">
@@ -94,7 +94,7 @@
         </div>
         <br>
         <br>
-        <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo1">秘鲁共和国
+        <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo1">idioma chino 秘鲁共和国
         </button>
         <div id="demo1" class="collapse">
             CHINA, KOREA
