--- a/ejercicio1Sumar.html
+++ b/ejercicio1Sumar.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="ejercicioMarche.js"></script>
+    <script src="ejercicio1Sumar.html"></script>
 </head>
 
 
