--- a/paises.html
+++ b/paises.html
@@ -118,8 +118,7 @@
                             <div class="ms-3">
                                 <p class="fw-bold mb-1"><select name="pais" class="opcionescontinentescasilla p-0"
                                         id="paises">
-                                        <option class="opcionescontinentes" value="null">Selecciona
-                                            País</option>
+                                        <option class="opcionescontinentes" value="null">SeleccionaPaís</option>
                                     </select></p>
                             </div>
                         </div>
