--- a/html/refuerzo2tablaoscar.html
+++ b/html/refuerzo2tablaoscar.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Document</title>
-    <script>src = "refuerzo2tablaoscar.js"</script>
+    <script src = "refuerzo2tablaoscar.js" defer ></script>
 </head>
 
 <body>
