--- a/html/refuerzo2tablaoscar.html
+++ b/html/refuerzo2tablaoscar.html
@@ -18,29 +18,29 @@
             <table border="1" class="table table-striped">
                 <tr>
                     <td>USUARIO</td>
-                    <td><input id="usuario" type="text" aling="center" name="usuario" required></td>
+                    <td><input id="usuario" type="text" aling="center"  required></td>
                 </tr>
                 <label class="form-label">
                     <tr>
                         <td>CLAVE</td>
-                        <td><input id="clave" type="password" value="" name="clave" required></td>
+                        <td><input id="clave" type="password" value=""  required></td>
                     </tr>
                     <tr>
                         <td>REPETIR CLAVE</td>
-                        <td><input id="repetirclave" type="password" value="" name="repetirclave" required></td>
+                        <td><input id="repetirclave" type="password" value="" required></td>
                     </tr>
                 </label>
                 <tr>
                     <td>EMAIL</td>
-                    <td><input id="email" type="email" name="email" required></td>
+                    <td><input id="email" type="email"  required></td>
                 </tr>
                 <tr>
                     <td>REPETIR EMAIL</td>
-                    <td><input id="repetiremail" type="email" name="repetiremail" required></td>
+                    <td><input id="repetiremail" type="email"  required></td>
                 </tr>
                 <tr>
                     <td colspan="2"><button onclick="registrar()" id="enviar" class="btn btn-secondary center-block"
-                            type="submit">ENVIAR</button>
+                            type="button">ENVIAR</button>
                     </td>
                 </tr>
             </table>
