--- a/index copy2.html
+++ b/index copy2.html
@@ -147,22 +147,16 @@
         </section>
         <section>
             <div class="tab-content container mt-3">
-                <div class="tab-pane face show" id="bandera">
-                    <table class="table table-borderless mt-5">
-                        <tr>
-                            <th style="background-color: #abc2a7;">BANDERA</th>
-                            <th style="background-color: #abc2a7;">ESCUDO</th>
-                        </tr>
-                        <tr>
-                            <td id="flag-container" class="p-5"><img src="" alt="" width="400px"></td>
-                            <td id="shield-container" class="p-2"><img src="" alt="" width="400px"></td>
-                        </tr>
-                    </table>
+             <div class="tab-pane face show" id="bandera">
+                <div class="row row-cols-2">
+                  <div class="col"><h2>BANDERA:</h2></div>
+                  <div class="col"><h2>ESCUDO:</h2></div>
+                  <div id="flag-container" class="col pt-3"><img class="rounded mx-auto d-block"  style="filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.7));" src="" alt="" width="300px" height="200"></div>
+                  <div id="shield-container" class="col pt-2"><img class="rounded mx-auto d-block"  style="filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.7));" src="" alt="" width="200px" height="250"></div>
                 </div>
-            </div>
+             </div>
             </div>
         </section>
-        </div>
     </main>
     <footer>
 
