--- a/mundoideal.html
+++ b/mundoideal.html
@@ -11,23 +11,23 @@
     <script src="mundoideal.js" defer></script>
 
 </head>
-<body>
+<body style="background-color:rgb(152, 111, 111)">
     <div class="container mt-4">
         <header class="mt-3">
             <div class="row">
                 <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
                         class="rounded-circle"></div>
-                <div class="col-sm-10">
-                    <h1 class="text-black text-center pt-5">PAISES DEL MUNDO</h1>
+                <div class="col-sm-8">
+                    <h1 class="text-white text-center pt-5">MUNDO</h1>
                 </div>
             </div>
         </header>
         <div class="fade" id="divspecial">
             <nav class="text-center" id="nav" >
-                <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-info">Datos Generales</button>
-                <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2" class="btn btn-info">Datos Geográficos</button>
-                <button disabled type="button" id="b3" class="btn btn-info">Traducciones</button>
-                <button disabled  onclick="dameBanderas()" type="button" id="b4" class="btn btn-info">Banderas</button>
+                <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-outline-dark">Datos Generales</button>
+                <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2" class="btn btn-outline-dark">Datos Geográficos</button>
+                <button disabled type="button" id="b3" class="btn btn-outline-dark">Traducciones</button>
+                <button disabled  onclick="dameBanderas()" type="button" id="b4" class="btn btn-outline-dark">Banderas</button>
             </nav>
         </div>
         <div class="tab-content mt-4">
