--- a/mundoideal.html
+++ b/mundoideal.html
@@ -15,7 +15,7 @@
     <div class="container mt-4">
         <header class="mt-3">
             <div class="row">
-                <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
+                <div class="col-sm-2"><img src="imagenes/hello_world_label.svg" width="200px" height="150px"
                         class="rounded-circle"></div>
                 <div class="col-sm-8">
                     <h1 class="text-white text-center pt-5">MUNDO</h1>
