--- a/crearnuevopaises.html
+++ b/crearnuevopaises.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="crearnuevopaises.js" defer></script>
 </head>
+
 <body>
     <div class="container mt-4">
         <header class="mt-3">
@@ -25,7 +27,7 @@
             <nav class="text-center" id="nav" >
                 <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-info">Datos Generales</button>
                 <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2" class="btn btn-info">Datos Geográficos</button>
-                <button disabled type="button" id="b3"  onclick="dameTraducciones()" class="btn btn-info">Traducciones</button>
+                <button disabled type="button" id="b3" class="btn btn-info">Traducciones</button>
                 <button disabled  onclick="dameBanderas()" type="button" id="b4" class="btn btn-info">Banderas</button>
             </nav>
         </div>
