--- a/mundoideal.html
+++ b/mundoideal.html
@@ -24,10 +24,10 @@
         </header>
         <div class="fade" id="divspecial">
             <nav class="text-center" id="nav" >
-                <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-outline-dark">Datos Generales</button>
-                <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2" class="btn btn-outline-dark">Datos Geográficos</button>
-                <button disabled type="button" id="b3" class="btn btn-outline-dark">Traducciones</button>
-                <button disabled  onclick="dameBanderas()" type="button" id="b4" class="btn btn-outline-dark">Banderas</button>
+                <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-outline-light">Datos Generales</button>
+                <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2" class="btn btn-outline-light">Datos Geográficos</button>
+                <button disabled type="button" id="b3" class="btn btn-outline-light">Traducciones</button>
+                <button disabled  onclick="dameBanderas()" type="button" id="b4" class="btn btn-outline-light">Banderas</button>
             </nav>
         </div>
         <div class="tab-content mt-4">
