--- a/mundoideal.html
+++ b/mundoideal.html
@@ -35,7 +35,7 @@
                 <form action="" method="post">
                     <div class="row">
                         <div class="col">
-                            Continente:<select name="continente" class="form-select form-select-sm" onchange="cargarPaises(this.value)">
+                            CONTINENTE:<select name="continente" class="form-select form-select-sm" onchange="cargarPaises(this.value)">
                                 <option value="0">Elige un continente</option>
                                 <option value="africa">Africa</option>
                                 <option value="americas">America</option>
@@ -45,7 +45,7 @@
                             </select>
                         </div>
                         <div class="col">
-                            País:<select onchange=cargarDatos(this.value) id="paises" name="pais" class="form-select form-select-sm">
+                            PAÍS:<select onchange=cargarDatos(this.value) id="paises" name="pais" class="form-select form-select-sm">
                                 <option value="0">Elige un país</option>
                             </select>
                         </div>
