--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="principal.js"></script>
+  <script src="principal.js" defer></script>
 </head>
 
 <body style="background-color:#d2eeb6;">
@@ -26,22 +26,14 @@
       </div>
     </header>
 
-    <div class="container mt-5">
-      <ul class="nav nav-pills nav-justified">
-        <li class="nav-item">
-          <button class="nav-link active bg-success" href="#" onclick="dameDatosGenerales()">DATOS GENERALES</button>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active bg-success" href="#">DATOS GEOGRÁFICOS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active bg-success" href="#">TRADUCCIÓN</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active bg-success" href="#">BANDERAS</a>
-        </li>
-      </ul>
-    </div>
+    <div class="fade" id="divspecial">
+      <nav class="text-center" id="nav" >
+          <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-info">Datos Generales</button>
+          <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2" class="btn btn-info">Datos Geográficos</button>
+          <button disabled type="button" id="b3" class="btn btn-info">Traducciones</button>
+          <button disabled  onclick="dameBanderas()" type="button" id="b4" class="btn btn-info">Banderas</button>
+      </nav>
+  </div>
 
     <div class="row mt-5">
       <div class="col">
