--- a/mundoideal.html
+++ b/mundoideal.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="mundoideal.js" defer></script>
@@ -18,7 +19,7 @@
                 <div class="col-sm-2"><img src="imagenes/hello_world_label.svg" width="200px" height="150px"
                         class="rounded-circle"></div>
                 <div class="col-sm-8">
-                    <h1 class="text-white text-center pt-5">MUNDO</h1>
+                    <h1 style = "text-shadow:20px -11px 2px rgba(0,0,0,0.6);"class="text-white text-center pt-5 ">MUNDO</h1>
                 </div>
             </div>
         </header>
