--- a/mundoideal.html
+++ b/mundoideal.html
@@ -19,7 +19,7 @@
                 <div class="col-sm-2"><img src="imagenes/hello_world_label.svg" width="200px" height="150px"
                         class="rounded-circle"></div>
                 <div class="col-sm-8">
-                    <h1 style = "text-shadow:20px -11px 2px rgba(0,0,0,0.6);"class="text-white text-center pt-5 ">MUNDO</h1>
+                    <h1 style = "text-shadow:20px -11px 2px rgba(67, 64, 64, 0.6);"class="text-white text-center pt-5 class=">MUNDO</h1>
                 </div>
             </div>
         </header>
