--- a/mundoideal.html
+++ b/mundoideal.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <script src="mundoideal.js" defer></script>
 
 </head>
+
 <body style="background-color:rgb(136, 107, 107)">
     <div class="container mt-5">
         <header class="mt-3">
@@ -19,24 +21,29 @@
                 <div class="col-sm-2"><img src="imagenes/hello_world_label.svg" width="200px" height="150px"
                         class="rounded-circle"></div>
                 <div class="col-sm-8">
-                    <h1 style = "text-shadow:20px -11px 2px rgba(60, 58, 58, 0.6);" class="text-white text-center pt-5">MUNDO</h1>
+                    <h1 style="text-shadow:20px -11px 2px rgba(60, 58, 58, 0.6);" class="text-white text-center pt-5">
+                        MUNDO</h1>
                 </div>
             </div>
         </header>
-        <div  id="divspecial">
-            <nav class="text-center ml-5" id="nav" >
-                <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-outline-light">DATOS GENERALES</button>
-                <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2" class="btn btn-outline-light">DATOS GEOGRAFICOS</button>
+        <div id="divspecial">
+            <nav class="text-center " id="nav">
+                <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-outline-light">DATOS
+                    GENERALES</button>
+                <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2"
+                    class="btn btn-outline-light">DATOS GEOGRAFICOS</button>
                 <button disabled type="button" id="b3" class="btn btn-outline-light">TRADUCCIONES</button>
-                <button disabled  onclick="dameBanderas()" type="button" id="b4" class="btn btn-outline-light" >BANDERAS</button>
+                <button disabled onclick="dameBanderas()" type="button" id="b4"
+                    class="btn btn-outline-light">BANDERAS</button>
             </nav>
         </div>
-        <div class="tab-content mt-5 ">
+        <div class="tab-content mt-5">
             <div id="datosgenerales" class="container tab-pane active"><br>
                 <form action="" method="post">
                     <div class="row">
                         <div class="col">
-                            CONTINENTE:<select name="continente" class="form-select form-select-sm" onchange="cargarPaises(this.value)">
+                            CONTINENTE:<select name="continente" class="form-select form-select-sm"
+                                onchange="cargarPaises(this.value)">
                                 <option value="0"> Continentes:</option>
                                 <option value="africa">Africa</option>
                                 <option value="americas">America</option>
@@ -46,16 +53,18 @@
                             </select>
                         </div>
                         <div class="col">
-                            PAÍS:<select onchange=cargarDatos(this.value) id="paises" name="pais" class="form-select form-select-sm">
+                            PAÍS:<select onchange=cargarDatos(this.value) id="paises" name="pais"
+                                class="form-select form-select-sm">
                                 <option value="0"> Países: </option>
                             </select>
                         </div>
                     </div>
                 </form>
             </div>
-            <main >         
-          
-            
+            <main>
+
+
             </main>
 </body>
+
 </html>
