--- a/eduardo.html
+++ b/eduardo.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
 
+</script>
 </head>
 
 <body>
@@ -83,8 +85,7 @@
                 </button>
                 <div id="demo4" class="collapse">
                     ESTOS SON LOS IDIOMAS
-                </div><br>
-                <br>
+                </div>
             </div>
         </div>
 </body>
